// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders empty table 1`] = `
<div
  class="alu-table-wrapper"
>
  <div
    class="alu-spin-nested-loading"
  >
    <div
      class="alu-spin-container"
    >
      <div
        class="alu-table alu-table-default alu-table-empty alu-table-scroll-position-left"
      >
        <div
          class="alu-table-content"
        >
          <div
            class="alu-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="alu-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <div>
                      Column 1
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 2
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 3
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 4
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 5
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 6
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 7
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 8
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="alu-table-tbody"
              />
            </table>
          </div>
          <div
            class="alu-table-placeholder"
          >
            <div
              class="alu-empty alu-empty-normal"
            >
              <div
                class="alu-empty-image"
              >
                <img
                  alt="No Data"
                  src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iNjRweCIgaGVpZ2h0PSI0MXB4IiB2aWV3Qm94PSIwIDAgNjQgNDEiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDUyLjUgKDY3NDY5KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDxnIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJub25lIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiPgogICAgICAgIDxnIHRyYW5zZm9ybT0idHJhbnNsYXRlKC00NzIuMDAwMDAwLCAtMTMzNS4wMDAwMDApIj4KICAgICAgICAgICAgPGcgIHRyYW5zZm9ybT0idHJhbnNsYXRlKDY0LjAwMDAwMCwgMTExNC4wMDAwMDApIj4KICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg0MC4wMDAwMDAsIDc4LjAwMDAwMCkiPgogICAgICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSgzNjguMDAwMDAwLCAxNDQuMDAwMDAwKSI+CiAgICAgICAgICAgICAgICAgICAgICAgIDxnID4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDxlbGxpcHNlICBmaWxsPSIjRjVGNUY1IiBjeD0iMzIiIGN5PSIzMyIgcng9IjMyIiByeT0iNyI+PC9lbGxpcHNlPgogICAgICAgICAgICAgICAgICAgICAgICAgICAgPGcgICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg5LjAwMDAwMCwgMC4wMDAwMDApIiBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTQ2LDEyLjc2MDU2MDQgTDM1Ljg1NDMwNDcsMS4yNTczOTYzMyBDMzUuMzY3NDQxNCwwLjQ3MzgyNjYwNSAzNC42NTU4Nzg5LDAgMzMuOTA2NzYxNywwIEwxMi4wOTMyMzgzLDAgQzExLjM0NDEyMTEsMCAxMC42MzI1NTg2LDAuNDczOTUwMjU1IDEwLjE0NTY5NTMsMS4yNTczOTYzMyBMMi42MTQ3OTcyN2UtMTIsMTIuNzYwNTYwNCBMMCwyMiBMNDYsMjIgTDQ2LDEyLjc2MDU2MDQgWiIgID48L3BhdGg+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTMyLjYxMzI4MTMsMTUuOTMxNSBDMzIuNjEzMjgxMywxNC4zMjU4NTExIDMzLjYwNjk1MzEsMTMuMDAwMjM0IDM0LjgzOTY5OTIsMTMgTDQ2LDEzIEw0NiwzMS4xMzcxMjc3IEM0NiwzMy4yNTg5NTc0IDQ0LjY3OTM4NjcsMzUgNDMuMDUwNDI5NywzNSBMMi45NDk1NzAzMSwzNSBDMS4zMjA1MjM0NCwzNSAwLDMzLjI1ODg0MDQgMCwzMS4xMzcxMjc3IEwwLDEzIEwxMS4xNjAzMDA4LDEzIEMxMi4zOTMwNDY5LDEzIDEzLjM4NjcxODgsMTQuMzIyODA4NSAxMy4zODY3MTg4LDE1LjkyODQ1NzQgTDEzLjM4NjcxODgsMTUuOTQ5NjM4MyBDMTMuMzg2NzE4OCwxNy41NTUyODcyIDE0LjM5MTcxMDksMTguODUxMTgwOSAxNS42MjQ0NTcsMTguODUxMTgwOSBMMzAuMzc1NTQzLDE4Ljg1MTE4MDkgQzMxLjYwODI4OTEsMTguODUxMTgwOSAzMi42MTMyODEzLDE3LjU0MzM1MTEgMzIuNjEzMjgxMywxNS45Mzc3MDIxIEwzMi42MTMyODEzLDE1LjkzMTUgWiIgIGZpbGw9IiNGQUZBRkEiPjwvcGF0aD4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgICAgICAgICAgPC9nPgogICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgPC9nPgogICAgICAgIDwvZz4KICAgIDwvZz4KPC9zdmc+"
                />
              </div>
              <p
                class="alu-empty-description"
              >
                No Data
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with custom emptyText 1`] = `
<div
  class="alu-table-wrapper"
>
  <div
    class="alu-spin-nested-loading"
  >
    <div
      class="alu-spin-container"
    >
      <div
        class="alu-table alu-table-default alu-table-empty alu-table-scroll-position-left"
      >
        <div
          class="alu-table-content"
        >
          <div
            class="alu-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="alu-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <div>
                      Column 1
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 2
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 3
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 4
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 5
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 6
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 7
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 8
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="alu-table-tbody"
              />
            </table>
          </div>
          <div
            class="alu-table-placeholder"
          >
            custom empty text 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table with fixed columns 1`] = `
<div
  class="alu-table-wrapper"
>
  <div
    class="alu-spin-nested-loading"
  >
    <div
      class="alu-spin-container"
    >
      <div
        class="alu-table alu-table-default alu-table-empty alu-table-scroll-position-left"
      >
        <div
          class="alu-table-content"
        >
          <div
            class="alu-table-scroll"
          >
            <div
              class="alu-table-body"
            >
              <table
                class=""
              >
                <colgroup>
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col
                    style="width:100px;min-width:100px"
                  />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col />
                  <col
                    style="width:100px;min-width:100px"
                  />
                </colgroup>
                <thead
                  class="alu-table-thead"
                >
                  <tr>
                    <th
                      class="alu-table-fixed-columns-in-body"
                    >
                      <div>
                        Full Name
                      </div>
                    </th>
                    <th
                      class="alu-table-fixed-columns-in-body"
                    >
                      <div>
                        Age
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 1
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 2
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 3
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 4
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 5
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 6
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 7
                      </div>
                    </th>
                    <th
                      class=""
                    >
                      <div>
                        Column 8
                      </div>
                    </th>
                    <th
                      class="alu-table-fixed-columns-in-body"
                    >
                      <div>
                        Action
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="alu-table-tbody"
                />
              </table>
            </div>
            <div
              class="alu-table-placeholder"
            >
              <div
                class="alu-empty alu-empty-normal"
              >
                <div
                  class="alu-empty-image"
                >
                  <img
                    alt="No Data"
                    src="data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz4KPHN2ZyB3aWR0aD0iNjRweCIgaGVpZ2h0PSI0MXB4IiB2aWV3Qm94PSIwIDAgNjQgNDEiIHZlcnNpb249IjEuMSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB4bWxuczp4bGluaz0iaHR0cDovL3d3dy53My5vcmcvMTk5OS94bGluayI+CiAgICA8IS0tIEdlbmVyYXRvcjogU2tldGNoIDUyLjUgKDY3NDY5KSAtIGh0dHA6Ly93d3cuYm9oZW1pYW5jb2RpbmcuY29tL3NrZXRjaCAtLT4KICAgIDxnIHN0cm9rZT0ibm9uZSIgc3Ryb2tlLXdpZHRoPSIxIiBmaWxsPSJub25lIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiPgogICAgICAgIDxnIHRyYW5zZm9ybT0idHJhbnNsYXRlKC00NzIuMDAwMDAwLCAtMTMzNS4wMDAwMDApIj4KICAgICAgICAgICAgPGcgIHRyYW5zZm9ybT0idHJhbnNsYXRlKDY0LjAwMDAwMCwgMTExNC4wMDAwMDApIj4KICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg0MC4wMDAwMDAsIDc4LjAwMDAwMCkiPgogICAgICAgICAgICAgICAgICAgIDxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSgzNjguMDAwMDAwLCAxNDQuMDAwMDAwKSI+CiAgICAgICAgICAgICAgICAgICAgICAgIDxnID4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDxlbGxpcHNlICBmaWxsPSIjRjVGNUY1IiBjeD0iMzIiIGN5PSIzMyIgcng9IjMyIiByeT0iNyI+PC9lbGxpcHNlPgogICAgICAgICAgICAgICAgICAgICAgICAgICAgPGcgICB0cmFuc2Zvcm09InRyYW5zbGF0ZSg5LjAwMDAwMCwgMC4wMDAwMDApIiBmaWxsLXJ1bGU9Im5vbnplcm8iIHN0cm9rZT0iI0Q5RDlEOSI+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTQ2LDEyLjc2MDU2MDQgTDM1Ljg1NDMwNDcsMS4yNTczOTYzMyBDMzUuMzY3NDQxNCwwLjQ3MzgyNjYwNSAzNC42NTU4Nzg5LDAgMzMuOTA2NzYxNywwIEwxMi4wOTMyMzgzLDAgQzExLjM0NDEyMTEsMCAxMC42MzI1NTg2LDAuNDczOTUwMjU1IDEwLjE0NTY5NTMsMS4yNTczOTYzMyBMMi42MTQ3OTcyN2UtMTIsMTIuNzYwNTYwNCBMMCwyMiBMNDYsMjIgTDQ2LDEyLjc2MDU2MDQgWiIgID48L3BhdGg+CiAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgPHBhdGggZD0iTTMyLjYxMzI4MTMsMTUuOTMxNSBDMzIuNjEzMjgxMywxNC4zMjU4NTExIDMzLjYwNjk1MzEsMTMuMDAwMjM0IDM0LjgzOTY5OTIsMTMgTDQ2LDEzIEw0NiwzMS4xMzcxMjc3IEM0NiwzMy4yNTg5NTc0IDQ0LjY3OTM4NjcsMzUgNDMuMDUwNDI5NywzNSBMMi45NDk1NzAzMSwzNSBDMS4zMjA1MjM0NCwzNSAwLDMzLjI1ODg0MDQgMCwzMS4xMzcxMjc3IEwwLDEzIEwxMS4xNjAzMDA4LDEzIEMxMi4zOTMwNDY5LDEzIDEzLjM4NjcxODgsMTQuMzIyODA4NSAxMy4zODY3MTg4LDE1LjkyODQ1NzQgTDEzLjM4NjcxODgsMTUuOTQ5NjM4MyBDMTMuMzg2NzE4OCwxNy41NTUyODcyIDE0LjM5MTcxMDksMTguODUxMTgwOSAxNS42MjQ0NTcsMTguODUxMTgwOSBMMzAuMzc1NTQzLDE4Ljg1MTE4MDkgQzMxLjYwODI4OTEsMTguODUxMTgwOSAzMi42MTMyODEzLDE3LjU0MzM1MTEgMzIuNjEzMjgxMywxNS45Mzc3MDIxIEwzMi42MTMyODEzLDE1LjkzMTUgWiIgIGZpbGw9IiNGQUZBRkEiPjwvcGF0aD4KICAgICAgICAgICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgICAgICAgICAgPC9nPgogICAgICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgICAgIDwvZz4KICAgICAgICAgICAgPC9nPgogICAgICAgIDwvZz4KICAgIDwvZz4KPC9zdmc+"
                  />
                </div>
                <p
                  class="alu-empty-description"
                >
                  No Data
                </p>
              </div>
            </div>
          </div>
          <div
            class="alu-table-fixed-left"
          >
            <div
              class="alu-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="alu-table-body-inner"
              >
                <table
                  class="alu-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="alu-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                      >
                        <div>
                          Full Name
                        </div>
                      </th>
                      <th
                        class=""
                      >
                        <div>
                          Age
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="alu-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
          <div
            class="alu-table-fixed-right"
          >
            <div
              class="alu-table-body-outer"
              style="-webkit-transform:translate3d (0, 0, 0)"
            >
              <div
                class="alu-table-body-inner"
              >
                <table
                  class="alu-table-fixed"
                >
                  <colgroup>
                    <col
                      style="width:100px;min-width:100px"
                    />
                  </colgroup>
                  <thead
                    class="alu-table-thead"
                  >
                    <tr>
                      <th
                        class=""
                      >
                        <div>
                          Action
                        </div>
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="alu-table-tbody"
                  />
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table renders empty table without emptyText when loading 1`] = `
<div
  class="alu-table-wrapper"
>
  <div
    class="alu-spin-nested-loading"
  >
    <div>
      <div
        class="alu-spin alu-spin-spinning alu-table-without-pagination alu-table-spin-holder"
      >
        <span
          class="alu-spin-dot alu-spin-dot-spin"
        >
          <i />
          <i />
          <i />
          <i />
        </span>
      </div>
    </div>
    <div
      class="alu-spin-container alu-spin-blur"
    >
      <div
        class="alu-table alu-table-default alu-table-empty alu-table-scroll-position-left"
      >
        <div
          class="alu-table-content"
        >
          <div
            class="alu-table-body"
          >
            <table
              class=""
            >
              <colgroup>
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
                <col />
              </colgroup>
              <thead
                class="alu-table-thead"
              >
                <tr>
                  <th
                    class=""
                  >
                    <div>
                      Column 1
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 2
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 3
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 4
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 5
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 6
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 7
                    </div>
                  </th>
                  <th
                    class=""
                  >
                    <div>
                      Column 8
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="alu-table-tbody"
              />
            </table>
          </div>
          <div
            class="alu-table-placeholder"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
